# C2practical

./: C2-practical  build.sh  config.opts  config.opts.in  dune-alugrid  dune-common  dune-geometry  dune-grid
c2-practical-1/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.lt  config.status  configure  configure.ac  createdoc.sh  dependencies.m4  dune.module  libtool  updatePractical.sh
c2-practical-1/doc/: Makefile  Makefile.am  Makefile.in
c2-practical-1/doc/doxygen/: Doxyfile  Makefile  Makefile.am  Makefile.in  doxygen.out
c2-practical-1/doc/doxygen/pages/: Makefile  Makefile.am  Makefile.in  mainpage.dist
c2-practical-1/html/: annotated.html  cghs_8hh.html  cghs_8hh_source.html  classDiscreteFunction-members.html  classDiscreteFunction.html  classDiscreteFunction__coll__graph.dot  classDiscreteFunction__coll__graph.map  classDiscreteFunction__coll__graph.md5  classDiscreteFunction__inherit__graph.dot  classDiscreteFunction__inherit__graph.map  classDiscreteFunction__inherit__graph.md5  classGRID_1_1Element-members.html  classGRID_1_1Element.html  classGRID_1_1ElementIterator-members.html  classGRID_1_1ElementIterator.html  classGRID_1_1ElementIterator__coll__graph.dot  classGRID_1_1ElementIterator__coll__graph.map  classGRID_1_1ElementIterator__coll__graph.md5  classGRID_1_1ElementIterator__inherit__graph.dot  classGRID_1_1ElementIterator__inherit__graph.map  classGRID_1_1ElementIterator__inherit__graph.md5  classGRID_1_1Grid-members.html  classGRID_1_1Grid.html  classGRID_1_1Intersection-members.html  classGRID_1_1Intersection.html  classGRID_1_1IntersectionIterator-members.html  classGRID_1_1IntersectionIterator.html  classGRID_1_1IntersectionIterator__coll__graph.dot  classGRID_1_1IntersectionIterator__coll__graph.map  classGRID_1_1IntersectionIterator__coll__graph.md5  classGRID_1_1IntersectionIterator__inherit__graph.dot  classGRID_1_1IntersectionIterator__inherit__graph.map  classGRID_1_1IntersectionIterator__inherit__graph.md5  classGRID_1_1Iterator-members.html  classGRID_1_1Iterator.html  classGRID_1_1Iterator__coll__graph.dot  classGRID_1_1Iterator__coll__graph.map  classGRID_1_1Iterator__coll__graph.md5  classLineQuadrature-members.html  classLineQuadrature.html  (+202 more)
c2-practical-1/src/: Makefile  Makefile.am  Makefile.in  laplace.cc
c2-practical-1/src/1/: Makefile  Makefile.am  Makefile.in  exercise1a.c  exercise1a.cc  exercise1a2.c  exercise1b.cc  exercise1c.cc  exercise1d.cc
c2-practical-1/src/10/: Makefile  Makefile.am  Makefile.in
c2-practical-1/src/2/: Makefile  Makefile.am  Makefile.in  Uh_1.vtu  exercise1d.cc  exercise2  exercise2.cc
c2-practical-1/src/2/.deps/: exercise2.Po
c2-practical-1/src/3/: Makefile  Makefile.am  Makefile.in  Uh_0.vtu  Uh_1.vtu  Uh_2.vtu  Uh_3.vtu  Uh_4.vtu  Uh_5.vtu  exercise2.cc  interpolate  interpolate.cc
c2-practical-1/src/3/.deps/: interpolate.Po
c2-practical-1/src/4/: Makefile  Makefile.am  Makefile.in  interpolate.cc  l2projection.cc
c2-practical-1/src/5/: Makefile  Makefile.am  Makefile.in  l2projection.cc  quadraticdiscretefunction.hh
c2-practical-1/src/6/: CRdiscretefunction.hh  Makefile  Makefile.am  Makefile.in  Uh_0.vtu  Uh_1.vtu  Uh_2.vtu  Uh_3.vtu  Uh_4.vtu  Uh_5.vtu  compute  l2projection.cc  laplace  laplace.cc  plots.gnu  problem0_h1.eps  problem0_h1eoc.eps  problem0_l2.eps  problem0_l2eoc.eps  problem1_h1.eps  problem1_h1eoc.eps  problem1_l2.eps  problem1_l2eoc.eps  problem2_h1.eps  problem2_h1eoc.eps  problem2_l2.eps  problem2_l2eoc.eps  quadraticdiscretefunction.hh  result_cr0.out  result_cr1.out  result_cr2.out  result_linear0.out  result_linear1.out  result_linear2.out  result_quad0.out  result_quad1.out  result_quad2.out
c2-practical-1/src/6/.deps/: l2projection.Po  laplace.Po
c2-practical-1/src/7/: Makefile  Makefile.am  Makefile.in
c2-practical-1/src/8/: Makefile  Makefile.am  Makefile.in
c2-practical-1/src/9/: .vtkout.hh.swp  Makefile  Makefile.am  Makefile.in  Uh_0.vtu  Uh_1.vtu  Uh_2.vtu  Uh_3.vtu  cgsolver.hh  crouzeixraviartdiscretefunction.hh  discretevectorfield.hh  elastic2D  elastic2D.cc  problem.hh  problem2a.out  problem2a.txt  problem2aq.out  problem2aq.txt  problem2b.out  problem2b.txt  problem2bq.out  problem2bq.txt  problem31.out  problem31.txt  problem32.out  problem32.txt  problem41.out  problem41.txt  problem42.txt  problem43.out  problem43.txt  problem_elastic2D.hh  vtkout.hh  yabish.out
c2-practical-1/src/9/.deps/: elastic2D.Po
c2-practical-1/src/common/: Makefile  Makefile.am  Makefile.in  cghs.hh  discretefunction.hh  grid.hh  quadrature.hh  quadrature5.hh  sparsematrix.hh  types.hh  vector.hh  vtkout.hh
c2-practical-1/src/problem/: Makefile  Makefile.am  Makefile.in  beam.dgf  cube.dgf  cube01.dgf  cube02.dgf  cube1.dgf  cube2.dgf  problem.hh  problem3.hh  problem4.hh  problem6.hh
dune-alugrid-2.3/dune/alugrid/common/: Makefile  Makefile.am  Makefile.in  alugrid_assert.hh  backuprestore.hh  bndprojection.hh  capabilities.hh  declaration.hh  defaultindexsets.hh  geostorage.hh  interfaces.hh  intersectioniteratorwrapper.hh  macrogridview.hh  memory.hh  objectfactory.hh  persistentcontainer.hh  structuredgridfactory.hh  transformation.hh
dune-alugrid-2.3/dune/alugrid/impl/test/: Makefile  Makefile.am  Makefile.in  (+1 more)
dune-alugrid-2.3/dune/alugrid/test/: Makefile  Makefile.am  Makefile.in  test-alugrid.cc
dune-alugrid-2.3/examples/: Makefile  Makefile.am  Makefile.in  adaptation.hh  alugrid.cfg  datamap.hh  diagnostics.hh  main.cc  piecewisefunction.hh  problem-ball.hh  problem-transport.hh  problem.hh  threadmanager.hh
dune-alugrid-2.3/examples/callback/: Makefile  Makefile.am  Makefile.in  adaptation.hh  alugrid.cfg  fvscheme.hh  main.cc  paralleldgf.hh  piecewisefunction.hh  problem-euler.hh
dune-alugrid-2.3/examples/dgf/: Makefile  Makefile.am  Makefile.in  cube_hc_32768.dgf  cube_hc_4096.dgf  ffs2d.dgf  sb2d.dgf  unitcube2d.dgf  unitcube3d.dgf
dune-alugrid-2.3/examples/loadbalancing/: Makefile  Makefile.am  Makefile.in  adaptation.hh  alugrid.cfg  loadbalance.hh  loadbalance_inline.hh  main.cc  partition.cc
(+555 files in other folders)
